<resources>
    <string name="app_name">Samochod</string>
    <string name="witaj_w_komisie_samochodowym">Witaj w komisie samochodowym</string>
    <string name="title_activity_click">ActivityClick</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dalej">DALEJ</string>
    <string name="todo">TODO</string>
    <string name="details">Details</string>
    <string name="biometricAuth">Autentykacja biometryczna</string>
    <string name="authBioStr">Uwierzytelnianie biometryczne</string>
    <string name="pin">Wpisz PIN</string>
    <string name="pinIn">PIN</string>
    <string name="loginBtn">ZALOGUJ</string>
    <string name="updateBtn">ZMIEN</string>
    <string name="deleteBtn">USUN</string>
    <string name="loginText">Zaloguj się</string>
    <string name="registerText">Zarejestruj się</string>
    <string name="password">Hasło</string>
    <string name="email">Email</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="emailTxt">Email</string>
    <string name="brand">Marka</string>
    <string name="model">Model</string>
    <string name="addNewCar">Dodaj nowy</string>
    <string name="brandImg">Brand</string>
    <string name="modelImg">Model</string>

    <string-array name="car_brand">
        <item> Ford </item>
        <item> Renault </item>
        <item> Citroen </item>
    </string-array>
    
    <string-array name="car_model">
        <item> Mondeo </item>
        <item> Clio </item>
        <item> C4 </item>
    </string-array>

</resources>