<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/witaj_w_komisie_samochodowym"
                android:textColor="#673AB7"
                android:textSize="24sp"
                android:textStyle="italic"
                android:typeface="serif" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="233dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ford" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="252dp"
                android:text="@string/dalej" />

            <Button
                android:id="@+id/logOutBtn"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginBottom="452dp"
                android:text="@string/wyloguj" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>