<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewBrand"
                android:layout_width="59dp"
                android:layout_height="35dp"
                android:text="@string/brand" />

            <EditText
                android:id="@+id/brandTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/textViewModel"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/model" />

            <EditText
                android:id="@+id/modelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:accessibilityLiveRegion="none"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/updateBtn"
                android:visibility="visible"
                tools:ignore="MissingConstraints"
                tools:visibility="visible" />

            <Button
                android:id="@+id/addBtn"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/addNewCar" />

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleteBtn"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>