<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="297dp"
        android:layout_height="826dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginBottom="4dp"
                android:text="@string/brand" />

            <EditText
                android:id="@+id/modelTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:id="@+id/textViewModel"
                android:layout_width="241dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="4dp"
                android:text="@string/model" />

            <EditText
                android:id="@+id/brandTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="127dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="68dp"
                android:text="@string/updateBtn"
                android:theme="@style/Button.Gray"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:text="@string/deleteBtn"
                android:theme="@style/Button.Gray"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="477dp" />

            <Button
                android:id="@+id/addBtn"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:text="@string/addNewCar"
                tools:layout_editor_absoluteX="7dp"
                tools:layout_editor_absoluteY="590dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>